tests/baselines/reference/duplicateConstructorOverloadSignature.errors.txt
tests/cases/compiler/duplicateConstructorOverloadSignature.ts(2,5): error TS2463: Duplicate overload signature for constructor.
tests/cases/compiler/duplicateConstructorOverloadSignature.ts(3,5): error TS2463: Duplicate overload signature for constructor.


==== tests/cases/compiler/duplicateConstructorOverloadSignature.ts (2 errors) ====
    class C {
        constructor(x: number);
        ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for constructor.
        constructor(x: number);
        ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for constructor.
        constructor(x: any) { }
    }